manifests/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    app.kubernetes.io/name: paperless-ngx
